--- a/sass/blocks/_collection.sass
+++ b/sass/blocks/_collection.sass
@@ -1,10 +1,11 @@
 .collection
   &-gallery
+    width: 670px
+    height: 490px
     display: flex
     flex-direction: column
     flex-wrap: wrap
     flex-basis: 58%
-    width: 670px
     &__image
       width: 320px
       flex-basis: 47%
@@ -21,7 +22,7 @@
         margin: 0 0 29px 0
   &-info
     max-width: 412px
-    height: 430px
+    min-height: 430px
     display: flex
     flex-direction: column
     flex-wrap: wrap
