--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -29,6 +29,8 @@
         &:hover
           filter: brightness(0) saturate(100%) invert(19%) sepia(8%) saturate(3867%) hue-rotate(165deg) brightness(95%) contrast(93%)
     &-title
+      max-width: 165px
+      min-height: 25px
       font-style: normal
       font-weight: bold
       font-size: 18px
@@ -39,6 +41,8 @@
       list-style-type: none
       padding: 0
       &__item
+        min-width: 165px
+        min-height: 22px
         font-style: normal
         font-weight: normal
         font-size: 16px
