--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -1,8 +1,9 @@
 .main
   max-width: 100%
+  min-height: 700px
   &-block
     max-width: 710px
-    height: 100%
+    min-height: 700px
     position: absolute
     top: 0
     left: 0
@@ -10,11 +11,9 @@
     display: flex
     flex-direction: column
     align-items: flex-start
-    padding-top: 62px
+    padding-top: 67px
     padding-left: 107px
     padding-bottom: 46px
-    display: flex
-    flex-direction: columns
   &-image
     width: 100%
     height: 100%
@@ -26,6 +25,7 @@
     &-narrow
       display: none
   &-badge
+    max-width: 175px
     font-family: Open Sans, sans-serif
     font-style: normal
     font-weight: 600
@@ -38,6 +38,7 @@
     border-radius: 2000px
     text-decoration: none
   &-title
+    max-width: 600px
     font-family: 'HK-Grotesk-Bold', sans-serif
     font-style: normal
     font-weight: 700
@@ -45,9 +46,10 @@
     line-height: 68px
     letter-spacing: 0.2px
     padding: 0
-    margin: 22px 0 34px
+    margin: 28px 0 34px
   &-text
     max-width: 652px
+    min-height: 108px
     font-style: normal
     font-weight: normal
     font-size: 20px
