--- a/sass/blocks/_trends.sass
+++ b/sass/blocks/_trends.sass
@@ -1,12 +1,13 @@
 .trends
   &-title
-    max-height: 60px
+    min-height: 60px
     display: flex
     flex-direction: row
     justify-content: space-between
     align-items: center
-    margin-bottom: 48px
+    margin-bottom: 24px
     &__header
+      max-width: 200px
       font-family: 'HK-Grotesk-Bold',sans-serif
       font-style: normal
       font-weight: bold
@@ -27,6 +28,8 @@
       margin: 0
       cursor: pointer
       &-item
+        max-width: 86px
+        min-height: 25px
         font-weight: normal
         font-style: normal
         font-size: 18px
@@ -45,7 +48,7 @@
 .card
   &-item
     max-width: 261px
-    max-height: 441px
+    min-height: 441px
     margin-bottom: 50px
     margin-right: 1px
   &-image
@@ -59,7 +62,7 @@
     &__normal, &__narrow
       display: none
   &-info
-    max-height: 91px
+    min-height: 91px
     display: flex
     flex-wrap: wrap
     justify-content: space-between
@@ -75,6 +78,7 @@
     margin: 0 0 4px 0
     flex-basis: 100%
   &-price
+    max-width: 150px
     font-style: normal
     font-weight: normal
     font-size: 20px
