--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -728,7 +728,7 @@
       padding: 0
       max-width: 100%
       display: flex
-      justify-content: end
+      justify-content: flex-end
       align-items: center
     &-title
       font-size: 32px
