--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -54,9 +54,31 @@
       display: flex
       justify-content: space-between
       align-items: center
+      outline: none
       &__image
         width: 56px
         height: 56px
+        outline: none
+      &__right
+        outline: none
+        &:active
+          outline: none
+        &:focus
+          outline: none
+        &:hover
+          outline: none
+        &:visited
+          outline: none
+      &__left
+        outline: none
+        &:active
+          outline: none
+        &:focus
+          outline: none
+        &:hover
+          outline: none
+        &:visited
+          outline: none
   &-cards
     width: 677px
     min-height: 475px
