--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -22,8 +22,12 @@
     top: 0
     left: 0
     object-position: 65% top
+    border-radius: 8px
     &-narrow
+      border-radius: 8px
       display: none
+    &-wide
+      border-radius: 8px
   &-badge
     max-width: 175px
     font-family: Open Sans, sans-serif
