--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -5,6 +5,11 @@
     display: flex
     width: 1140px
     margin: 128px auto
+  &-title
+    width: 0
+    height: 0
+    padding: 0
+    margin: 0
   &-block
     display: flex
     flex-direction: column
