--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -86,7 +86,7 @@
     flex-direction: row
     flex-basis: 58%
     justify-content: space-between
-    padding: 0 0 0 5px
+    padding: 9px 0 0 14px
     &__item
       width: 322px
       min-height: 475px
@@ -95,6 +95,10 @@
       &:first-child
         margin-right: 18px
         min-height: 475px
+      &--narrow
+        border: 1px solid black
+        min-height: 30px
+        width: 40px
     &__image
       width: 312px
       max-height: 317px
@@ -116,7 +120,7 @@
       flex-wrap: wrap
       position: absolute
       bottom: 0
-      right: 0
+      left: 10px
       background-color: $bgr-legend
     &-title
       width: 260px
