--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -595,6 +595,7 @@
       text-align: center
       padding: 13px 49px
     &-menu
+      width: 90%
       margin: 15px 0 0 0
       flex-wrap: wrap
       justify-content: center
