--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -65,6 +65,12 @@
     padding: 11px 20px
     border-radius: 8px
     text-decoration: none
+    background: #FFF
+    cursor: pointer
+    outline: none
+    &:hover
+      outline: none
+      background: $bgr-legend
   &-bottom
     display: none
     &--visible
