--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -72,6 +72,11 @@
     text-align: center
     color: #FFFFFF
     border: none
+    outline: none
+    cursor: pointer
+    &:hover
+      background: #1677C1
+      outline: none
   &-menu
     width: 469px
     display: flex
