--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -431,27 +431,35 @@
       min-height: 1096px
   .collection
     &-gallery
-      width: 290px
-      flex-direction: row
+      width: 528px
+      height: 390px
+      /*flex-direction: row*/
       &__image
+        max-width: 250px
+        object-fit: cover
+        border-radius: 8px
         &:first-child
-          display: none
+          max-width: 250px
+          margin: 0 10px 0 0
+          /*display: none*/
         &--cafe
-          margin: 0 14px 0 0
+          margin: 0 0 22px 0
         &--cafe, &--room
-          width: 138px
-          height: 97px
+          /*width: 138px*/
+          /*min-height: 97px*/
         &--mobile
-          display: flex
+          /*display: flex*/
           height: 300px
           width: 290px
           flex-basis: 100%
           margin: 0 0 14px 0
     &-info
       min-width: 290px
-      width: 290px
-      flex-direction: row
-      margin: 36px 0 0 0
+      min-height: 330px
+      width: 522px
+      flex-direction: column
+      justify-content: flex-start
+      margin: 10px 0 0 0
       &__title
         font-style: normal
         font-weight: bold
@@ -459,16 +467,13 @@
         line-height: 36px
         text-align: center
         letter-spacing: 0.2px
-        margin: 0 0 20px 0
+        margin: 10px 0
+        height: 36px
       &__text
-        display: none
+        /*display: none*/
+        display: block
         &--mobile
-          display: block
-          font-style: normal
-          font-weight: normal
-          font-size: 16px
-          line-height: 28px
-          text-align: center
+          display: none
   .card
     &-item
       max-width: 240px
@@ -604,6 +609,47 @@
       max-width: 95%
       padding-left: 0
       padding-right: 0
+  .collection
+    &-gallery
+      width: 290px
+      flex-direction: row
+      &__image
+        max-width: 290px
+        &:first-child
+          display: none
+        &--cafe
+          margin: 0 14px 0 0
+        &--cafe, &--room
+          width: 138px
+          height: 97px
+        &--mobile
+          display: flex
+          height: 300px
+          width: 290px
+          flex-basis: 100%
+          margin: 0 0 14px 0
+    &-info
+      min-width: 290px
+      width: 290px
+      flex-direction: row
+      margin: 36px 0 0 0
+      &__title
+        font-style: normal
+        font-weight: bold
+        font-size: 28px
+        line-height: 36px
+        text-align: center
+        letter-spacing: 0.2px
+        margin: 0 0 20px 0
+      &__text
+        display: none
+        &--mobile
+          display: block
+          font-style: normal
+          font-weight: normal
+          font-size: 16px
+          line-height: 28px
+          text-align: center
   .card
     &-item
       /*max-width: 183px*/
