--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,5 +24,7 @@
 @import 'blocks/_thanks'
 // Стили для блока footer
 @import 'blocks/_footer'
+// Стили для блока modal
+@import 'blocks/_modal'
 // Подключение стилей для адаптива
 @import 'media'
