--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1016,3 +1016,15 @@
         height: 100%
         top: 62px
         overflow: scroll
+  .modal
+    overflow-y: initial !important
+    &__title
+      margin: 0
+    &__dialog
+      max-height: 100%
+      overflow-y: auto
+      padding: 20px
+    &__button
+      font-size: 18px
+      line-height: 20px
+      margin-bottom: 20px
