--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -65,12 +65,14 @@
     padding: 11px 20px
     border-radius: 8px
     text-decoration: none
-    background: #FFF
+    /*background: #FFF*/
+    background: inherit
     cursor: pointer
     outline: none
     &:hover
       outline: none
-      background: $bgr-legend
+      color: $quote
+      border: 2px solid $quote
   &-bottom
     display: none
     &--visible
