added: modal form layout fixed

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -557,6 +557,13 @@
       &-contact
         margin-bottom: 67px
         order: 4
+  .modal
+    &__dialog
+      padding: 30px
+      min-width: 80%
+      max-width: 90%
+    &__info
+      margin-top: 5px
 @media (max-width: 576px)
   .container
     &-navbar
