--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -402,7 +402,7 @@
         margin-bottom: 20px
     &-block
       justify-content: flex-start
-      margin-top: -15px
+      margin-top: -35px
   .footer
     &-wrapper
       width: 652px
@@ -647,7 +647,7 @@
         line-height: 36px
         text-align: center
         letter-spacing: 0.2px
-        margin: 0 0 20px 0
+        margin: 0 0 42px 0
       &__text
         display: none
         &--mobile
@@ -668,6 +668,7 @@
       &__narrow
         display: flex
         height: 100%
+        object-fit: cover
     &-info
       justify-content: flex-start
       padding: 16px 5px 1px 5px
@@ -695,7 +696,7 @@
         text-align: center
         letter-spacing: 0.12px
         color: $primary
-        margin-bottom: 28px
+        margin-bottom: 11px
         &--wide, &--normal
           display: none
         &--narrow
@@ -774,17 +775,41 @@
       right: 0
       bottom: 0
       top: 59px
-@media (max-width: 440px)
-  .trends
-    &-cards
-      /*justify-content: space-between*/
+@media (max-width: 480px)
   .card
     &-item
-      /*max-width: 140px*/
-      min-height: 360px
-      width: 45%
+      max-width: 141px
+      min-height: 234px
+      margin-bottom: 12px
     &-image
-      max-height: 285px
+      &__wide, &__normal
+        display: none
+      &__narrow
+        display: flex
+        height: 171px
+    &-info
+      min-height: 51px
+      padding: 6px 5px 1px 5px
+    &-title
+      font-style: normal
+      font-weight: bold
+      font-size: 16px
+      line-height: 20px
+      letter-spacing: 0.2px
+    &-price
+      max-width: 90px
+      font-style: normal
+      font-weight: normal
+      font-size: 14px
+      line-height: 24px
+    &-icon
+      font-style: normal
+      font-weight: 900
+      font-size: 12px
+      line-height: 32px
+      letter-spacing: 0.1px
+      margin: 0 0 -10px 2px
+      padding: 0 0 10px 0
 @media (max-width: 320px)
   .container
     max-width: 100%
@@ -865,7 +890,7 @@
         display: none
       &__text
         &--mobile
-          margin: 0 0 133px 0
+          margin: 0
   .trends
     &-title
       margin-bottom: 35px
@@ -882,7 +907,7 @@
     &-item
       max-width: 141px
       min-height: 234px
-      margin-bottom: -8px
+      margin-bottom: -4px
     &-image
       &__wide, &__normal
         display: none
@@ -957,7 +982,7 @@
     &-title
       margin-top: 76px
     &-block
-      margin-top: 3px
+      margin-top: -11px
   .footer
     &-wrapper
       width: 253px
