added: adaptive layout

--- a/sass/blocks/_collection.sass
+++ b/sass/blocks/_collection.sass
@@ -62,6 +62,7 @@
       align-items: center
       text-decoration: none
       &-label
+        max-width: 350px
         margin-right: 19px
       &-icon
         font-style: normal
