--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -280,17 +280,21 @@
       min-height: 552px
       padding-left: 28px
       padding-top: 36px
+      padding-bottom: 38px
     &-title
-      margin: 18px 0 25px
+      height: 197px
+      margin: 18px 0 0
       font-size: 48px
       line-height: 60px
     &-text
+      height: 128px
       max-width: 77%
       line-height: 32px
       font-size: 18px
-      margin: 0 0 57px 0
+      margin: 12px 0 33px 0
     &-button
-      padding: 15px 41px
+      width: 259px
+      padding: 15px 3px
     &-menu
       width: 450px
       margin: 40px 0 0 0
@@ -501,7 +505,7 @@
       &__legend
         width: 270px
         min-height: 150px
-        bottom: -1px
+        top: 63%
       &-title
         width: 243px
         min-height: 72px
@@ -846,6 +850,9 @@
       display: flex
       justify-content: flex-end
       align-items: center
+    &-badge
+      max-width: 196px
+      padding: 4px 26px
     &-title
       font-size: 32px
       font-style: normal
@@ -854,14 +861,15 @@
       line-height: 40px
       text-align: center
       letter-spacing: 0.2px
-      margin: 13px 4px 20px 0px
+      margin: 13px 4px 23px 0px
     &-text
+      height: 140px
       font-style: normal
       font-weight: normal
       font-size: 16px
       line-height: 28px
       text-align: center
-      margin: 0 0 25px 0
+      margin: 0 0 23px 0
     &-button
       font-style: normal
       font-weight: bold
@@ -971,9 +979,9 @@
       min-height: 919px
       margin: -73px 0 0 0
       &__legend
-        bottom: -1px
+        top: 63%
       &-title
-        margin: 20px 10px 17px 20px
+        margin: 20px 10px -14px 20px
       &__image
         max-height: 277px
   .newsletter
