--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -41,6 +41,9 @@
     padding: 6px 16px
     border-radius: 2000px
     text-decoration: none
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
   &-title
     max-width: 600px
     font-family: 'HK-Grotesk-Bold', sans-serif
@@ -51,9 +54,12 @@
     letter-spacing: 0.2px
     padding: 0
     margin: 22px 0 34px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
   &-text
     max-width: 652px
-    min-height: 108px
+    height: 108px
     font-style: normal
     font-weight: normal
     font-size: 20px
@@ -61,10 +67,14 @@
     color: $text-color
     padding: 0
     margin: 0 0 53px 0
+    white-space: inherit
+    overflow: hidden
+    text-overflow: ellipsis
   &-button
+    width: 258px
     background: $primary
     border-radius: 8px
-    padding: 15px 40px
+    padding: 15px 20px
     font-style: normal
     font-weight: bold
     font-size: 18px
@@ -74,6 +84,9 @@
     border: none
     outline: none
     cursor: pointer
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
     &:hover
       background: #1677C1
       outline: none
@@ -94,6 +107,7 @@
       &:nth-child(2)
         margin: 0
     &__link
+      max-width: 171px
       display: flex
       align-items: center
       text-decoration: none
@@ -105,3 +119,7 @@
       letter-spacing: 0.4px
       color: $primary
       margin-right: 6px
+    &__text
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
