--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -130,6 +130,10 @@
         margin: 0
       &__item
         margin-right: 0
+    &-exit
+      &:hover
+        color: $secondary
+        border: 2px solid $secondary
   .main
     &-block
       padding-left: 18px
@@ -139,6 +143,9 @@
     &-text
       max-width: 72%
       margin: 0 0 46px 0
+    &-button
+      &:hover
+        background: $primary
   .card
     &-item
       /*max-width: 220px*/
@@ -190,6 +197,16 @@
       justify-content: flex-start
     &__subscribe
       margin: 40px 0 0 0
+  .subscribe
+    &__button
+      &:hover
+        background: $primary
+  .footer
+    &-block
+      &-menu
+        &__item
+          &:hover
+            text-decoration: none
 @media (max-width: 954px)
   .card
     &-item
@@ -861,7 +878,7 @@
       line-height: 40px
       text-align: center
       letter-spacing: 0.2px
-      margin: 13px 4px 23px 0px
+      margin: 13px 4px -55px 0px
     &-text
       height: 140px
       font-style: normal
