--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -168,3 +168,10 @@ label.invalid
   line-height: 12px
   border-bottom: none
   color: #FFFFFF
+.footer
+  position: relative
+#top
+  position: absolute
+  bottom: 20px
+  right: 40px
+  cursor: pointer
