--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -18,6 +18,20 @@
       width: 16px
       height: 1px
       background-color: #333
+  &-close
+    display: flex
+    width: 24px
+    height: 16px
+    padding: 0
+    align-items: center
+    justify-content: space-between
+    flex-direction: column
+    border: none
+    background-color: #fff
+    cursor: pointer
+    outline: none
+    &-image
+      filter: brightness(0) saturate(100%) invert(19%) sepia(8%) saturate(3867%) hue-rotate(165deg) brightness(95%) contrast(93%)
 .navbar
   &-top
     min-width: 100%
