--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -21,7 +21,7 @@
     max-width: 478px
     padding: 33px 88px
     transform: translate(-50%, -50%)
-    background-color: $primary
+    background-color: $secondary
     color: $background-color
     border-radius: 8px
     z-index: 101
