--- a/sass/blocks/_thanks.sass
+++ b/sass/blocks/_thanks.sass
@@ -22,7 +22,7 @@
     font-size: 12px
     line-height: 15px
 .button
-  &-home
+  &__home
     color: #ffffff
     background-color: $primary
     padding: 8px 12px
