--- a/sass/blocks/_trends.sass
+++ b/sass/blocks/_trends.sass
@@ -51,6 +51,11 @@
     min-height: 441px
     margin-bottom: 50px
     margin-right: 1px
+    &-look
+      text-decoration: none
+      outline: none
+      &:active
+        outline: none
   &-image
     height: 350px
     /*min-width: 260px*/
