--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -226,7 +226,7 @@
       margin: 8px auto 30px
       max-width: 84%
       &__bottom
-        height: 100%
+        height: 100vh
         width: 100%
         min-height: 100%
         min-width: 100%
@@ -848,7 +848,7 @@
       max-width: 280px
       margin: -95px auto 64px
     &-history
-      padding: 0
+      padding: 3px 0 0 0
       margin: 15px auto -9px
     &-footer
       min-height: 1045px
@@ -910,9 +910,9 @@
     &-info
       margin: 33px 0 0 0
       &__title
-        margin: 0 0 22px 0
+        margin: 0 0 53px 0
       &__link
-        display: none
+        /*display: none*/
       &__text
         &--mobile
           margin: 0
@@ -987,11 +987,11 @@
       margin: 0 0 99px 0
       &-badge
         width: 94px
-        height: 24px
-        padding: 4px
+        min-height: 22px
+        padding: 3px
       &-title
         &--narrow
-          margin: 15px auto 4px
+          margin: 19px auto 4px
     &-cards
       min-height: 919px
       margin: -73px 0 0 0
@@ -1008,11 +1008,14 @@
       margin-top: 76px
     &-block
       margin-top: -11px
+  .subscribe
+    &__button
+      top: 57px
   .footer
     &-wrapper
       width: 253px
       min-height: 999px
-      margin: 48px 0 0 30px
+      margin: 48px 0 0 34px
       display: flex
       align-items: flex-start
     &-block
@@ -1056,7 +1059,18 @@
           margin-top: 11px
           margin-bottom: 21px
           margin-right: 11px
-
+  .modal
+    overflow-y: initial !important
+    &__title
+      margin: 0
+    &__dialog
+      max-height: 100%
+      overflow-y: auto
+      padding: 20px
+    &__button
+      font-size: 18px
+      line-height: 20px
+      margin-bottom: 20px
 @media only screen and (max-device-height: 750px) and (orientation: landscape)
   .container
     &-navbar
@@ -1065,7 +1079,7 @@
         overflow: scroll
   .navbar
     &-menu
-      overflow-y: scroll
+      /*overflow-y: scroll*/
       &__item
         margin-bottom: 15px
     &-bottom
