--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -134,8 +134,8 @@ body
   font-weight: bold
   font-size: 12px
   line-height: 15px
-  color: $primary
-  background-color: $quote
+  color: #ffffff
+  background-color: $primary
   border-radius: 4px
   border: none
   overflow: hidden
@@ -143,7 +143,7 @@ body
   /*white-space: nowrap*/
   cursor: pointer
   &:hover
-    background-color: #ef3215
+    background-color: #072E4D
   &__home
     margin-top: 15px
     display: flex
@@ -167,7 +167,7 @@ label.invalid
   font-size: 12px
   line-height: 12px
   border-bottom: none
-  color: #FFFFFF
+  color: red
 .footer
   position: relative
 #top
@@ -178,3 +178,37 @@ label.invalid
 .top
   width: 30px
   height: 30px
+.visible
+  display: inline
+.hiden
+  display: none!important
+#button
+  display: inline-block
+  background-color: $quote
+  width: 50px
+  height: 50px
+  text-align: center
+  border-radius: 4px
+  position: fixed
+  bottom: 30px
+  right: 30px
+  transition: background-color .3s, opacity .5s, visibility .5s
+  opacity: 0
+  visibility: hidden
+  z-index: 1000
+  &::after
+    content: "\f077"
+    font-family: FontAwesome
+    font-weight: normal
+    font-style: normal
+    font-size: 2em
+    line-height: 50px
+    color: #fff
+  &:hover
+    cursor: pointer
+    background-color: #333
+  &:active
+    background-color: #555
+  &.show
+    opacity: 1
+    visibility: visible
