--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -16,6 +16,8 @@
       min-height: 415px
     &-history
       max-width: 90%
+    &-thanks
+      max-width: 90%
     &-footer
       max-height: 720px
   .navbar
@@ -852,6 +854,8 @@
       margin: 15px auto -9px
     &-footer
       min-height: 1045px
+    &-thanks
+      max-width: 95%
   .main
     margin-top: 86px
     &-image
