--- a/sass/blocks/_thanks.sass
+++ b/sass/blocks/_thanks.sass
@@ -13,7 +13,7 @@
       margin-top: 2px
       margin-bottom: 0
     &__description
-      margin: 0
+      margin: 15px 0
   &-wrapper
     display: flex
     flex-wrap: wrap
@@ -26,3 +26,4 @@
     color: #ffffff
     background-color: $primary
     padding: 8px 12px
+    align-items: center
