added: fixed errors

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -798,6 +798,10 @@
       right: 0
       bottom: 0
       top: 59px
+  .thanks
+    &-info
+      &__name
+        font-size: 18px
 @media (max-width: 480px)
   .card
     &-item
@@ -1085,7 +1089,7 @@
     &-menu
       /*overflow-y: scroll*/
       &__item
-        margin-bottom: 15px
+        margin-bottom: 10px
     &-bottom
       &--visible
         height: 100%
