--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -452,6 +452,13 @@
       padding: 0
     &-footer
       min-height: 1096px
+    &-navbar
+      margin-bottom: 0
+      &__bottom
+        padding-top: 0px
+  .navbar
+    &-menu
+      margin-top: 0
   .collection
     &-gallery
       width: 528px
@@ -1083,11 +1090,14 @@
   .container
     &-navbar
       height: 100%
+      margin-bottom: 0
       &__bottom
         overflow: scroll
+        padding-top: 0
   .navbar
     &-menu
       /*overflow-y: scroll*/
+      margin-top: 0
       &__item
         margin-bottom: 10px
     &-bottom
