--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -15,7 +15,7 @@ body
     &__bottom
       height: 100%
       width: 100%
-      padding-top: 22px
+      padding-top: 0
       background-color: $primary
   &-main
     max-width: 1280px
