--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -46,6 +46,7 @@
     align-items: center
     justify-content: space-between
     flex-direction: column
+    margin-top: 0
     &__top
       display: flex
       flex-direction: row
