--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -251,6 +251,19 @@
       min-height: 887px
       margin: -9px auto -9px
       padding: 0
+  .menu
+    &-close
+      display: flex
+      width: 24px
+      height: 16px
+      padding: 0
+      align-items: center
+      justify-content: space-between
+      flex-direction: column
+      border: none
+      background-color: #fff
+      cursor: pointer
+      outline: none
   .navbar
     position: fixed
     top: 0
@@ -259,6 +272,7 @@
     z-index: 99
     background-color: #fff
     &-menu
+      margin-top: 15px
       &__top
         display: none
       &__item
@@ -458,7 +472,7 @@
         padding-top: 0px
   .navbar
     &-menu
-      margin-top: 0
+      /*margin-top: 0*/
   .collection
     &-gallery
       width: 528px
@@ -612,6 +626,7 @@
       display: flex
       justify-content: flex-end
       align-items: center
+      padding-bottom: 10px
     &-title
       font-size: 32px
       font-style: normal
@@ -1086,6 +1101,8 @@
       font-size: 18px
       line-height: 20px
       margin-bottom: 20px
+  .line
+    width: 100%
 @media only screen and (max-device-height: 750px) and (orientation: landscape)
   .container
     &-navbar
@@ -1097,7 +1114,7 @@
   .navbar
     &-menu
       /*overflow-y: scroll*/
-      margin-top: 0
+      margin-top: 15px
       &__item
         margin-bottom: 10px
     &-bottom
