--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -13,6 +13,7 @@ body
     align-items: center
     margin-bottom: 36px
     &__bottom
+      display: none
       height: 100%
       width: 100%
       padding-top: 0
@@ -70,7 +71,7 @@ body
     align-items: end
   &-thanks
     max-width: 1150px
-    min-height: 200px
+    min-height: 260px
     padding: 0
     margin: 65px auto 80px
     overflow: hidden
