--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -19,7 +19,8 @@
       height: 1px
       background-color: #333
   &-close
-    display: flex
+    display: none
+    /*display: flex*/
     width: 24px
     height: 16px
     padding: 0
@@ -46,7 +47,7 @@
     align-items: center
     justify-content: space-between
     flex-direction: column
-    margin-top: 0
+    margin-top: 15px
     &__top
       display: flex
       flex-direction: row
