added: adaptive layout

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -58,9 +58,11 @@
       justify-content: space-between
       margin: 0 13px 0 0
       padding: 0
-    &_item
+    &__item
       margin-right: 40px
       max-width: fit-content
+      &:last-child
+        margin-top: 8px
     &__link
       font-family: Open Sans
       font-style: normal
